--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,11 @@ buildscript {
         nav_version = "2.3.0-alpha02"
         kotlin_version = '1.3.61'
         room_version = "2.2.4"
+        retrofit_version = "2.7.2"
+        version_moshi = "1.8.0"
+        version_retrofit_coroutines_adapter = "0.9.2"
+
+
     }
     repositories {
         google()
