--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,6 +13,10 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 
+    kotlinOptions {
+        jvmTarget = JavaVersion.VERSION_1_8.toString()
+    }
+
     defaultConfig {
         applicationId "com.computerwizards.moodnotes"
         minSdkVersion 21
@@ -64,7 +68,8 @@ dependencies {
 //    Retrofit coroutines
     implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:$version_retrofit_coroutines_adapter"
 
-
+    // Glide
+    implementation "com.github.bumptech.glide:glide:$version_glide"
 
 
 
