--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ buildscript {
         retrofit_version = "2.7.2"
         version_moshi = "1.8.0"
         version_retrofit_coroutines_adapter = "0.9.2"
+        version_glide = "4.8.0"
 
 
     }
